--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "cordova-android": "^6.3.0",
     "cordova-browser": "^5.0.3",
     "cordova-ios": "^4.5.4",
+    "cordova-plugin-canvas2image": "^0.7.0",
     "cordova-plugin-dialogs": "^2.0.1",
     "cordova-plugin-whitelist": "^1.3.3"
   },
   "cordova": {
     "plugins": {
       "cordova-plugin-whitelist": {},
-      "cordova-plugin-dialogs": {}
+      "cordova-plugin-dialogs": {},
+      "cordova-plugin-canvas2image": {}
     },
     "platforms": [
       "ios",
